# haskell-scraps

./: LICENSE  haskell-scraps.cabal  hello.hs  readme.txt
bassbull/: LICENSE  bassbull.cabal
bassbull/src/: Bassbull.hs  Main.hs
json-test/: json-test.cabal  jsontest.hs  pizza.json  temp.json
json-test/src/: Main.hs
src/: Main.hs
