name:                haskell-scraps
version:             0.1.0.0
synopsis:            Playing around with Haskell
homepage:            https://github.com/victorgan/haskell-scraps
license:             BSD3
license-file:        LICENSE
author:              Victor Gan
maintainer:          victorgan@gmail.com
copyright:           2015, Victor Gan
category:            Data
build-type:          Simple
extra-source-files:  readme.txt
cabal-version:       >=1.10

executable haskell-scraps
  ghc-options:        -Wall -- enable GHC warnings
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  
