name:                json-test
version:             0.1.0.0
synopsis:            testing
description:         Just some tests
license:             BSD3
license-file:        LICENSE
author:              Victor Gan
maintainer:          victorgan@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable json-test
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       aeson,
                       http-conduit,
                       text,
                       bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
